--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/elements.css">
     <link rel="stylesheet" href="../css/colorswitch.css" type="text/css">
     <link rel="stylesheet" href="../css/main.css" type="text/css">
     <title>RandomPrompts!</title>
@@ -11,6 +12,16 @@
     <main>
         <h3>Clique para gerar um prompt aleatório!</h3>
         <input type="button" value="Começar!" id="btnGerarPrompt">
+        
+        <!--
+            <section id="janelaPrompt">
+                <h3 id="tituloPrompt">#000 - Título do Prompt</h3>
+                <p id="instrucoesPrompt">Instruções do Prompt. Aqui vão todas as instruções do prompt de exercício pro usuário. Blá blá blá, abobrinha, blá blá blá, mais abobrinha, mais blá blá blá =)</p>
+                <input type="button" value="Fechar" id="btnFecharJanela">
+            </section>
+        -->
+
     </main>
+    <script src="../js/main.js"></script>
 </body>
 </html>
